# android_workflow_core

./: .gitignore  README.md  __init__.py  cli.py  pyproject.toml  requirements.txt
android_workflow_core/: __init__.py
android_workflow_core/workflows/: hello_world_workflow.py
android_workflow_core/workflows/core/: workflow_factory.py
core/: __init__.py  cli.py  workflow.py  workflow_cli_parser.py  workflow_config.py  workflow_factory.py  workflow_interface.py  workflow_types.py
core/messaging/: __init__.py
core/workflows/: __init__.py
core/workflows/core/: workflow.py  workflow_config.py
messaging/: __init__.py  messaging.py
scripts/: take_ui_snapshot.sh
tests/: test_core_cli.py  test_core_hello_world_workflow.py  test_core_messaging_config_resolution.py  test_core_workflow_factory.py  test_workflow_connection.py
workflow_core/: __init__.py
workflow_core/workflows/core/: __init__.py  workflow_factory.py
workflows/: __init__.py  hello_world_workflow.py
