[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "android_workflow_core"
version = "0.1.0"
description = "Shared Android UI automation core (workflow orchestration, messaging, CLI)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Shared Automation" }]
dependencies = [
    "uiautomator2>=2.16.25",
    "tenacity",
    "twilio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyrefly",
]
